--- a/scss/widgets.scss
+++ b/scss/widgets.scss
@@ -2222,7 +2222,7 @@ ul.iconlist-tree {
                 top: 50%;
                 transform: translate(-50%, -50%);
                 z-index: 2;
-                opacity: .75;
+                opacity: 0.75;
                 border-radius: 50%;
                 box-shadow: 0 2px 3px 0 rgba(58,65,111,.3), 0 6px 10px -2px rgba(58,65,111,.2), inset 0 -2px 0 0 rgba(58,65,111,.5), inset 0 1px 0 0 rgba(255,255,255,.3);
                 background-color: #1252f5;
